<resources>
    <string name="app_name">MyApplicationSplash</string>
    <string name="enter_employee_id_number">Enter Employee ID Number</string>
    <string name="Input">Input Id Number</string>
    <string name="LOGIN">LOGIN</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="pfms_sabi_logo">PFMS SABI Logo</string>
    <string name="payments_anywhere_anytime">Payments Anywhere Anytime</string>
</resources>