<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login">

<ImageView
    android:id="@+id/LogoImage"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/thetruckpfmslogo"
    android:contentDescription="@string/pfms_sabi_logo"
    android:layout_gravity="center_horizontal"
    android:scaleType="fitCenter"
    android:layout_marginBottom="15dp"/>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="25px"/>

    <ImageView
        android:id="@+id/pesapallogo"
        android:layout_width="93dp"
        android:layout_height="36dp"
        android:src="@drawable/pesapallogo2"
        android:contentDescription="@string/payments_anywhere_anytime"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:layout_marginBottom="1dp"/>

    <TextView
        android:text="@string/LOGIN"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="40dp"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/enter_employee_id_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="2dp"
        android:textColor="@color/black"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="15px"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/under1line"
            android:id="@+id/input"
            android:hint="@string/Input"
            android:textColorHint="#D9D9D9"
            android:backgroundTintMode="@android:color/transparent"
            android:padding="9dp"
            android:inputType="text"
            android:drawableStart="@drawable/my_account"
            android:drawablePadding="12dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="28px"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity=""
        android:layout_margin="24dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/button_red_background"
        android:padding="13dp"
        android:text="@string/LOGIN"
        android:textColor="@android:color/white" />


</LinearLayout>